# SyntropicOS

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  library.properties  mkdocs.yml  sources.mk
docs/: arduino.md  directory-structure.md  getting-started.md  index.md  porting-guide.md  testing.md
docs/modules/: communication.md  control.md  crypto.md  drivers.md  multitasking.md  system.md
examples/Blink/: Blink.ino
examples/MotorFSM/: MotorFSM.ino
examples/SensorLogger/: SensorLogger.ino
examples/SerialCLI/: SerialCLI.ino
examples/arduino_serial/: README.md
examples/arduino_serial/src/: main.cpp
examples/esp32_ota/: CMakeLists.txt
examples/esp32_ota/main/: CMakeLists.txt  main.c
examples/pico_dual_core/: main.c
examples/stm32_serial/: README.md  platformio.ini
examples/stm32_serial/include/: syn_config.h
examples/stm32_serial/src/: main.c
port/stm32_hal/: port_stm32_hal.c
port/stm32f4/: Makefile.renode  startup_stm32f407.c  test_firmware.c  test_firmware_debug.c  test_firmware_multinode.c
src/: SyntropicOS.h
src/port/arduino/: port_arduino.cpp
src/port/esp32/: port_esp32.c
src/port/posix/: port_posix_socket.c
src/port/rp2040/: port_rp2040.c
src/port/stm32_hal/: port_stm32_hal.c
src/port/stm32f4/: port_stm32f4.c
src/syntropic/: syn_config_template.h  syntropic.h
src/syntropic/cli/: syn_cli.c  syn_cli.h
src/syntropic/common/: syn_compiler.h  syn_defs.h
src/syntropic/control/: syn_autotune.c  syn_autotune.h  syn_control_stats.c  syn_control_stats.h  syn_pid.c  syn_pid.h
src/syntropic/crypto/: syn_blake2s.c  syn_blake2s.h  syn_chacha20poly1305.c  syn_chacha20poly1305.h  syn_x25519.c  syn_x25519.h
src/syntropic/debug/: syn_profiler.c  syn_profiler.h  syn_trace.c  syn_trace.h
src/syntropic/display/: syn_canvas.c  syn_canvas.h  syn_gfx.h
src/syntropic/drivers/: syn_adc.c  syn_adc.h  syn_can.c  syn_can.h  syn_dac.c  syn_dac.h  syn_exti.c  syn_exti.h  syn_gpio.c  syn_gpio.h  syn_i2c_dev.h  syn_rtc.c  syn_rtc.h  syn_sd.c  syn_sd.h  syn_soft_i2c.c  syn_soft_i2c.h  syn_soft_onewire.c  syn_soft_onewire.h  syn_soft_spi.c  syn_soft_spi.h  syn_spi_dev.h  syn_uart.c  syn_uart.h
src/syntropic/dsp/: syn_biquad.c  syn_biquad.h  syn_fft.c  syn_fft.h  syn_filter.c  syn_filter.h  syn_signal.c  syn_signal.h
src/syntropic/input/: syn_button.c  syn_button.h  syn_encoder.c  syn_encoder.h
src/syntropic/log/: syn_datalog.c  syn_datalog.h  syn_log.c  syn_log.h
src/syntropic/motor/: syn_actuator.c  syn_actuator.h  syn_dc_motor.c  syn_dc_motor.h  syn_motor_ctrl.c  syn_motor_ctrl.h  syn_motor_output.h  syn_servo.c  syn_servo.h  syn_stepper.c  syn_stepper.h
src/syntropic/net/: syn_coap.c  syn_coap.h  syn_dns.c  syn_dns.h  syn_heartbeat.c  syn_heartbeat.h  syn_http.c  syn_http.h  syn_httpd.c  syn_httpd.h  syn_mqtt.c  syn_mqtt.h  syn_router.c  syn_router.h  syn_sntp.c  syn_sntp.h  syn_transport.h  syn_transport_tcp.c  syn_transport_tcp.h  syn_websocket.c  syn_websocket.h  syn_wg.c  syn_wg.h
src/syntropic/output/: syn_led.c  syn_led.h  syn_soft_pwm.c  syn_soft_pwm.h
src/syntropic/port/: syn_port_adc.h  syn_port_can.h  syn_port_dac.h  syn_port_dma.h  syn_port_exti.h  syn_port_flash.h  syn_port_gpio.h  syn_port_i2c.h  syn_port_i2c_async.h  syn_port_pwm.h  syn_port_rtc.h  syn_port_serial.h  syn_port_socket.h  syn_port_spi.h  syn_port_spi_async.h  syn_port_system.h  syn_port_uart.h  syn_port_wdt.h
src/syntropic/port_stubs/: syn_port_stubs.c
src/syntropic/proto/: syn_cobs.c  syn_cobs.h  syn_modbus.c  syn_modbus.h
src/syntropic/pt/: syn_pt.h  syn_pt_sem.h
src/syntropic/sched/: syn_ao.c  syn_ao.h  syn_mailbox.h  syn_sched.c  syn_sched.h  syn_sequencer.c  syn_sequencer.h  syn_task.h  syn_timer.c  syn_timer.h  syn_watchdog.c  syn_watchdog.h  syn_workqueue.c  syn_workqueue.h
src/syntropic/sensor/: syn_sensor.c  syn_sensor.h
src/syntropic/storage/: syn_fat.c  syn_fat.h  syn_lfs.c  syn_lfs.h  syn_param.c  syn_param.h  syn_settings.c  syn_settings.h  syn_vfs.c  syn_vfs.h
src/syntropic/system/: syn_boot.c  syn_boot.h  syn_errlog.c  syn_errlog.h  syn_fault.c  syn_fault.h  syn_fwboot.c  syn_fwboot.h  syn_fwimage.h  syn_fwupdate.c  syn_fwupdate.h  syn_hwwdt.c  syn_hwwdt.h  syn_power.c  syn_power.h  syn_sleep.h  syn_version.h
src/syntropic/ui/: syn_imgui.c  syn_imgui.h  syn_menu.c  syn_menu.h
src/syntropic/util/: syn_assert.h  syn_bits.h  syn_cbor_read.c  syn_cbor_read.h  syn_cbor_write.c  syn_cbor_write.h  syn_change_filter.h  syn_crc.c  syn_crc.h  syn_event.h  syn_fmt.c  syn_fmt.h  syn_fsm.c  syn_fsm.h  syn_hysteresis.h  syn_json_read.c  syn_json_read.h  syn_json_write.c  syn_json_write.h  syn_lut.h  syn_pack.h  syn_pingpong.h  syn_pubsub.c  syn_pubsub.h  syn_qmath.h  syn_ramp.c  syn_ramp.h  syn_rate_limit.h  syn_ringbuf.c  syn_ringbuf.h  syn_scurve.c  syn_scurve.h  syn_sha256.c  syn_timeout.h
tests/: Makefile.check  Makefile.fuzz  Makefile.unity  cppcheck_syntropic.cfg  test_actuator.c  test_adc.c  test_autotune.c  test_boot.c  test_button.c  test_can.c  test_canvas.c  test_cbor.c  test_cli.c  test_coap.c  test_cobs.c  test_control_stats.c  test_crc.c  test_crypto.c  test_datalog.c  test_dc_motor.c  test_dma.c  test_dns.c  test_dsp_ext.c  test_encoder.c  test_exti.c  test_filter.c  test_fmt.c  test_fsm.c  test_fwupdate.c  test_fwupdate_hmac.c  test_gpio.c  test_heartbeat.c  test_http.c  test_httpd.c  test_i2c_async.c  test_imgui.c  test_json_read.c  test_json_write.c  test_led.c  test_log.c  (+36 more)
tests/imgui_host/: Makefile
tests/mocks/: mock_port.c  mock_port.h
tests/sim/: scenarios_fixed.c  sim_harness.c
